--- a/html/index.html
+++ b/html/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             margin: 0;
-            background-color: blue;
+            background-color: white;
         }
     </style>
 </head>
